added keybase to site

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
             "url": "http://www.last.fm/user/colkito"
           }
         ],
+        "keybase": "https://keybase.io/colkito",
         "source_code_url": "https://github.com/colkito/colkito.com"
       }
       </code>
